# adjust_the_price_of_the_item_in_sales_test_001

./: README.md  pyproject.toml
.github/workflows/: ci.yml
adjust_the_price_of_the_item_in_sales_test_001/: hooks.py  modules.txt
adjust_the_price_of_the_item_in_sales_test_001/adjust_the_price_of_the_item_in_sales_test_001/: adjust_the_price_of_the_item_in_sales_py.py
adjust_the_price_of_the_item_in_sales_test_001/fixtures/: custom_field.json
