[project]
name = "adjust_the_price_of_the_item_in_sales_test_001"
authors = [
    { name = "khattab@info.com", email = "khattab@info.com"}
]
description = "Adjust Item Price based on Foreign Purchases with Average Purchase Price profit margin"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
